[gd_scene load_steps=4 format=3 uid="uid://cpie7bd51ae28"]

[ext_resource type="Theme" uid="uid://bwnv8b362a2w7" path="res://menus/menu_theme.tres" id="1_7078j"]
[ext_resource type="Script" path="res://menus/leaderboards/leaderboard.gd" id="1_t6il6"]
[ext_resource type="PackedScene" uid="uid://joajaspr73lg" path="res://menus/scores/ScoreItem.tscn" id="3_i43t5"]

[node name="leaderboard" type="ColorRect"]
custom_minimum_size = Vector2(1200, 827)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -720.0
offset_bottom = -253.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7078j")
color = Color(0, 0, 0, 0.847059)
script = ExtResource("1_t6il6")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="leaderboard_label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Leaderboard"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(1170, 600)
layout_mode = 2

[node name="score_container" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="ScoreItem" parent="CenterContainer/VBoxContainer/ScrollContainer/score_container" instance=ExtResource("3_i43t5")]
layout_mode = 2
